[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "async-aws-lambda"
version = "0.1.0"
description = "A lightweight, zero-dependency library for building async AWS Lambda functions"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Buckstop", email = "dev@buckstop.com"},
]
keywords = ["aws", "lambda", "async", "serverless", "asyncio"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: System :: Distributed Computing",
]

dependencies = [
    # Zero dependencies for core functionality
]

[project.optional-dependencies]
db = [
    "sqlalchemy[asyncio]>=2.0.0",
]
config = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]
aws = [
    "boto3>=1.28.0",
]
all = [
    "sqlalchemy[asyncio]>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "boto3>=1.28.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.urls]
Homepage = "https://github.com/bucktop-industries/async-aws-lambda"
Documentation = "https://github.com/bucktop-industries/async-aws-lambda#readme"
Repository = "https://github.com/bucktop-industries/async-aws-lambda"
Issues = "https://github.com/bucktop-industries/async-aws-lambda/issues"

[tool.setuptools]
packages = {find = {}}

[tool.setuptools.package-data]
async_aws_lambda = ["py.typed"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
show_error_codes = true
disallow_any_generics = true

[[tool.mypy.overrides]]
module = [
    "sqlalchemy.*",
    "pydantic.*",
    "pydantic_settings.*",
    "boto3.*",
]
ignore_missing_imports = true

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["async_aws_lambda"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--asyncio-mode=auto",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "requires_db: Tests that require database",
    "requires_config: Tests that require config dependencies",
    "requires_aws: Tests that require AWS dependencies",
]

